<resources>
    <!-- Existing strings -->
    <string name="app_name">Budget Tracking</string>

    <!-- New strings for activity_main.xml -->
    <string name="title_budget_settings">Budget Settings</string>
    <string name="empty_message">No categories available. Add one now!</string>
    <string name="add_budget_category">Add Budget Category</string>

    <!-- New strings for dialog_add_category.xml -->
    <!-- Hints -->
    <string name="hint_category_name">Category Name</string>
    <string name="hint_enter_category_name">Enter category name</string>
    <string name="hint_budget_limit">Budget Limit</string>
    <string name="hint_enter_budget_limit">Enter budget limit</string>

    <!-- Content Descriptions -->
    <string name="content_desc_category_name_field">Category Name field</string>
    <string name="content_desc_budget_limit_field">Budget Limit field</string>
    <string name="content_desc_add_category_button">Add a new budget category</string>

    <!-- Button Text -->
    <string name="btn_add_category">Add Category</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--  Expenses strings -->
    <string name="title_expenses">Expenses</string>
    <string name="empty_expenses_message">No expenses recorded. Add one now!</string>
    <string name="add_expense">Add Expense</string>

</resources>

